jobmatch/src/main/resources/static/styles/main.css
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    color: #5E5E5E;
    font-family: 'Roboto', 'Helvetica', sans-serif;
}

#wrapper {
    height: 100%;
    margin-left: 20%;
    width: 80%;
    position: relative;
}

header {
    text-align: left;
    background: #F2F2F2;
    color: #999999;
    height: 50px;
    padding: 10px;
    width: 100%;
    position: absolute;
    /*z-index:-1;*/
}

.logo-link {
    text-decoration: none;
    color: inherit;
}

.logo-link:hover {
    text-decoration: none;
}

h1 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    margin: 5px;
    font-size: 20px;
}

h3 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 200;
    margin: 5px;
    font-size: 20px;
}

.headline {
    text-align: center;
}

.logo {
    color: #FF9933 !important;
    font-weight: 700 !important;
}

#sidebar {
    padding-top: 20px;
    float: left;
    width: 20%;
    position: fixed;
    height: 100%;
    background: #5E5E5E;
    color: white;
    left: 0;
}

img.avatar {
    display: inline;
    padding: 30px 0 0 0;
}

h2 {
    margin: 5px;
    font-size: 15px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 700;
    text-transform: uppercase;
    max-width: 80%;
}

h2.company {
    display: inline;
}

.sidebar-button {
    display: block;
    margin: 0 auto;
    border: none;
    border-radius: 5px;
    color: #FFFFFF;
    background: #FF9933;
    padding: 10px 20px 10px 20px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
    text-decoration: none;
    text-transform: uppercase;
}

.sidebar-button:hover {
    background: #E58A2E;
    text-decoration: none;
    cursor: pointer;
}

#sidebar-nav {
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 100%;
    font-family: 'Montserrat', sans-serif;
}

#sidebar-nav > li > a {
    display: block;
    padding: 25px 0 25px 20px;
    margin-bottom: 3px;
    color: #AEAEAE;
    background-color: #6B6B6B;
    text-decoration: none;
}

#sidebar-nav > li > a:hover {
    color: white;
}

#sidebar-nav > li > a:active {
    color: white;
}

#content {
    float: left;
    width: 100%;
    margin-top: 50px;
}

/*job posting*/
#job-post {
    width: 50%;
    margin-left: 25%;
}

/*sortable list*/
ol.sortable-list,
ul.checkbox-list {
    padding: 0;
    display: inline-block;
    vertical-align: top;
}

ol.sortable-list li {
    list-style-position: inside;
}

ul.checkbox-list li {
    list-style-type: none;
}

ol.sortable-list li {
    padding: 2px 5px;
    margin: 1px;
    background-color: #FF9933;
    color: white;
    cursor: move;
}

form.form-profile{
    text-align: center;
}
.form-field {
    margin: 0 auto;
    position: relative;
    margin-bottom: 20px;
}

.form-jobpost input[type="text"] {
    width: 88%;
    border-radius: 3px;
    padding: 15px;
}

textarea {
    width: 90%;
    height: 100px;
    border-radius: 3px;
}

.form-input {
    border: 1px solid #E4E4E4;
    border-radius: 3px;
    padding: 10px;
}

.form-jobpost select {
    width: 36%;
    border-radius: 3px;
    padding: 15px;
}

.form-jobpost label {
    padding: 5px;
}

.radio-button {
    display: inline;
    padding: 10px;
    border: 1px solid #E4E4E4;
}

.form-jobpost select,
.form-jobpost input[type="text"],
.form-jobpost textarea {
    background-color: white;
    border: 1px solid #E4E4E4;
}

.form-jobpost select:focus,
.form-jobpost select:hover,
.form-jobpost input[type="text"]:focus,
.form-jobpost input[type="text"]:hover,
.form-jobpost textarea:focus,
.form-jobpost textarea:hover {
    background-color: white;
    border: 1px solid #D7D7D7;
}

.form-jobpost input, textarea, select {
    font-family: 'Open Sans', sans-serif;
}

.select-text {
    margin: 1px;
}

.form-jobpost textarea {
    padding: 15px 0 0 15px;
}

.form-jobpost input[type="submit"]:hover {
    background: #E58A2E;
    text-decoration: none;
    cursor: pointer;
}

p.note {
    font-style: italic;
    font-size: .8em;
    margin-top: 0;
}

/*jobs list, leaderboard*/
.jobs-list {
    width: 100%;
}

.jobs-list > ul {
    list-style-type: none;
    align: left;
    margin-left: 10%;
    margin-right: 10%;
    padding-left: 0px;
}

.jobs-list > ul > li {
    font-family: "Montserrat", sans-serif;
    margin-bottom: 5px;
    padding: 25px;
    background-color: #FF9933;
    color: white;
}

.jobs-list > ul > li:hover {
    color: white;
    background-color: #6B6B6B;
    cursor: pointer;
}

ul.title-matches-list > li > div.title {
    float: left
}

ul.title-matches-list > li > div.matches {
    float: right
}

#bg a:link, #bg a:visited, #bg a:hover {
    color: white;
}

#bg a:hover {
    color: #FF9933;
}

.call-to-action,
.button {
    padding: 10px 20px 10px 20px;
    text-decoration: none;
    border-radius: 5px;
    text-transform: uppercase;

    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
}

.call-to-action {
    color: white;
    background: #FF9933;
    border: none;
}

.call-to-action:hover {
    background: #E58A2E;
    cursor: pointer;
}

.button {
    border-radius: 5px;
    color: #FF9933;
    background: white;
    border: 1px solid rgba(255, 153, 51, .4);
}

.button:hover {
    cursor: pointer;
    border: 1px rgb(255, 153, 51) solid;
}

.button[disabled] {
    color: silver;
    border-color: silver;
    cursor: default;
}

section[data-page]:not(:first-of-type) {
    display: none;
}

.view-job h2 {
    margin: 1em 0 0.5em 0;
    font-weight: normal;
    position: relative;
    font-size: 28px;
    line-height: 40px;
    background: #FF9933;
    border: 1px solid #fff;
    padding: 5px 15px;
    color: white;
    border-radius: 0 10px 0 10px;
    font-family: 'Muli', sans-serif;
}

.view-job h3 {
    margin: 1em 0 0.5em 0;
    font-weight: 600;
    font-family: 'Titillium Web', sans-serif;
    font-size: 18px;
    line-height: 30px;
    color: #FF9933;
    text-transform: uppercase;
    border-bottom: 1px solid #aaa;
}

.view-job p {
    margin: 1em 0 0.5em 0;
    font-weight: 600;
    font-family: 'Montserrat', sans-serif;
    position: relative;
    font-size: 18px;
    line-height: 20px;
    color: #999999;
}

#nobg a:link, #nobg a:visited {
    color: darkorange;
}

#nobg a:hover {
    color: lightsalmon;
}

table {
    width: 80%;
    border-collapse: collapse;
    font-size: 13px;
    color: #5E5E5E;
    margin-top: 20px;
}

th, td {
    padding: 10px;
    text-align: left;
}

table#t1 tr:nth-child(even) {
    background-color: #F2F2F2;
}

table#t1 tr:nth-child(odd) {
    background-color: #FFF;
}

table#t1 th {
    background-color: #5E5E5E;
    color: white;
    font-size: large;
    padding: 15px;
}

/*
 * Material Design
 */
.mdl-button.mdl-button--colored.submit-button {
    color: #FFFFFF;
    display: block;
    margin: 0 auto;
}

.mdl-button.mdl-button--colored.form-button {
    color: #FFFFFF;
}

.col-centered {
    float: none;
    margin: 0 auto;
}

.mdl-card-wide.mdl-card {
    width: 100%;
}

.mdl-card__actions .mdl-badge {
    float: right;
    margin-top: 10px;
}

.mdl-badge[data-badge]:after {
    color: white;
}

.mdl-textfield {
    width: 100%;
}

